--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     h2 {color: teal}
     p {font-style: oblique;font-size: 15pt}
   </style>
-    <a href="Stories.html">More About Me</a>
+    <a href="stories.html">More About Me</a>
   <p> My name is Cheyanne and I am a Certified Scrum Master and Program Manager under the Dept of Defense. I am a web developer with experience in WireFraming, HTML, Figma and more! My hobbies include golfing and traveling.</p>
   <!-- Secret Comment -->
   <p>Some of my favorite things:</p>
